# gl-oci

./: .buildinfo  .gitignore  LICENSE  Makefile  README.md  cli.py  config.ini  genindex.html  gl-oci.sh  go.mod  go.sum  index.html  main.go  modules.html  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree  modules.doctree
.github/: dependabot.yml
.github/workflows/: bandit.yml  build.yml  docs.yml  go.yml  pytests.yml
_sources/: index.rst.txt
cert/: gencert.sh
cmd/: annotateImage.go  annotateManifest.go  attachImage.go  attachLayer.go  createImage.go  createIndex.go  createManifest.go  image.go  index.go  manifest.go  root.go
docs/: conf.py  index.rst  modules.rst
example-data/: extras  foo2.bar  info.yaml  info_2.yaml  layers.yaml
gl-oci/: cli.py  utils.py
gl-oci/commands/: manifest.py  remote.py
hack/: ghcr-io.sh
src/gloci/: cli.py
src/gloci/commands/: image.py  manifest.py  ocm.py  registry.py  remote.py
src/gloci/helper/: utils.py
src/gloci/oras/: connector.py  crypto.py  defaults.py  helper.py  index.py  registry.py  schemas.py
tests/: conftest.py  helper.py  test_gloci_crypto.py  test_push_image.py
zot/: config.json
