[tool.poetry]
name = "gl-oci"
version = "0.1.0"
description = "Garden Linux OCI releases CLI"
authors = ["Vincent Riesop <vincent.riesop@gmail.com>"]
readme = "README.md"
packages = [
     { include = "gloci", from = "src" },
]
[tool.poetry.scripts]
cli = "gloci.cli:cli"

[tool.poetry.dependencies]
python = "^3.10"
PyYAML = "^6.0.1"
click = "^8.1.7"
oras = { git  = "https://github.com/oras-project/oras-py.git", rev="caf8db5b279382335fbb1f6d7402ed9b73618d37" }
parse_features_lib = { git  = "https://github.com/gardenlinux/parse_features_lib", rev="main" }
#oras = "^0.1.30"
cryptography = "^43.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
python-dotenv = "^1.0.1"

[tool.ruff]
line-length = 100

[tool.pylint.format]
max-line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
